--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/vvscode/env-setup-demo/issues"
   },
-  "homepage": "https://github.com/vvscode/env-setup-demo#readme"
+  "homepage": "https://github.com/vvscode/env-setup-demo#readme",
+  "dependencies": {
+    "jest": "^28.1.1"
+  },
+  "devDependencies": {
+    "@types/jest": "^28.1.2"
+  }
 }
