--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/vvscode/env-setup-demo#readme",
   "dependencies": {
-    "jest": "^28.1.1"
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1"
   },
   "devDependencies": {
     "@types/jest": "^28.1.2"
