--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "jest-environment-jsdom": "^28.1.1"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.2"
+    "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "@types/jest": "^28.1.2",
+    "babel-jest": "^28.1.1"
   }
 }
