--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
     "@types/jest": "^28.1.2",
-    "babel-jest": "^28.1.1"
+    "babel-jest": "^28.1.1",
+    "eslint": "^8.17.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
   }
 }
