--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
   },
   "homepage": "https://github.com/vvscode/env-setup-demo#readme",
   "dependencies": {
+    "e2e-mailbox": "^1.1.1",
+    "fetch-cookie": "^2.1.0",
     "jabber": "^1.4.0",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "qs": "^6.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.5",
