--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
     "node-fetch": "^2.6.7",
-    "qs": "^6.11.0"
+    "qs": "^6.11.0",
+    "webdriverio": "^7.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.5",
