Start TS integration

--- a/package.json
+++ b/package.json
@@ -47,6 +47,6 @@
   },
   "lint-staged": {
     "*.js": "eslint --fix",
-    "*.{js,css,md,html,yml}": "prettier --write"
+    "*.{js,css,md,html,yml,ts}": "prettier --write"
   }
 }
