--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "prettier": "^2.7.1"
   },
   "lint-staged": {
-    "*.js": "eslint --fix",
+    "*.{js,ts}": "eslint --fix",
     "*.{js,css,md,html,yml,ts}": "prettier --write"
   }
 }
